# public/docs/openapi.yaml
@@ -26,12 +26,12 @@ paths:
                 email:
                   type: string
                   description: 'Must be a valid email address.'
-                  example: ftreutel@example.net
+                  example: shields.renee@example.com
                   nullable: false
                 password:
                   type: string
                   description: 'Must be at least 6  characters. Must not be greater than 18 characters.'
-                  example: "x*C'80R}^KK"
+                  example: '/5jK%&s8z[-&G%#BqD$h'
                   nullable: false
               required:
                 - email
@@ -56,17 +56,17 @@ paths:
                 name:
                   type: string
                   description: 'Must be at least 6  characters. Must not be greater than 24 characters.'
-                  example: szvmxcfyvkxrkfaihvdpm
+                  example: ddgfvycohxrunvhslq
                   nullable: false
                 email:
                   type: string
                   description: 'Must be a valid email address.'
-                  example: audrey.mckenzie@example.org
+                  example: ludwig.crona@example.com
                   nullable: false
                 password:
                   type: string
                   description: 'Must be at least 6  characters. Must not be greater than 18  characters.'
-                  example: mebC5q_vtw_$nEv
+                  example: "#xan|'%Pl`-"
                   nullable: false
               required:
                 - name
@@ -139,7 +139,7 @@ paths:
         in: path
         name: id
         description: 'The ID of the user.'
-        example: est
+        example: beatae
         required: true
         schema:
           type: string
@@ -162,12 +162,12 @@ paths:
                 name:
                   type: string
                   description: ''
-                  example: est
+                  example: consequatur
                   nullable: false
                 description:
                   type: string
                   description: ''
-                  example: 'Debitis perspiciatis consectetur vel voluptates.'
+                  example: 'Rem officiis sed tempore dolor nulla.'
                   nullable: true
               required:
                 - name
@@ -229,10 +229,72 @@ paths:
         in: path
         name: id
         description: 'The ID of the category.'
-        example: 17
+        example: 15
         required: true
         schema:
           type: integer
+  /api/v1/item:
+    get:
+      summary: ''
+      operationId: getApiV1Item
+      description: ''
+      parameters: []
+      responses:
+        401:
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  message: Unauthenticated.
+                properties:
+                  message:
+                    type: string
+                    example: Unauthenticated.
+      tags:
+        - Endpoints
+      security: []
+  '/api/v1/item/{id}':
+    get:
+      summary: ''
+      operationId: getApiV1ItemId
+      description: ''
+      parameters: []
+      responses:
+        401:
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  message: Unauthenticated.
+                properties:
+                  message:
+                    type: string
+                    example: Unauthenticated.
+      tags:
+        - Endpoints
+      security: []
+    delete:
+      summary: ''
+      operationId: deleteApiV1ItemId
+      description: ''
+      parameters: []
+      responses: {  }
+      tags:
+        - Endpoints
+      security: []
+    parameters:
+      -
+        in: path
+        name: id
+        description: 'The ID of the item.'
+        example: quam
+        required: true
+        schema:
+          type: string
 tags:
   -
     name: Endpoints
